Prevent mailing list input box to overflow on the mobile layout

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -128,7 +128,6 @@ div > a:target, section:target {
     #mc_embed_signup input.email {
         width:95%;
         margin: 10px 0px 20px 0px;
-        min-width: 300px; 
     }
 }
 
